--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "polyorb-hi-ada"]
 	path = polyorb-hi-ada
 	url = https://gitrepos.estec.esa.int/taste/polyorb-hi-ada.git
+[submodule "testSuites"]
+	path = testSuites
+	url = https://gitrepos.estec.esa.int/taste/regression-suites.git
