--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "ellidiss-GUI"]
 	path = ellidiss-GUI
 	url = https://gitrepos.estec.esa.int/taste/ellidiss-release.git
+[submodule "buildsupport"]
+	path = buildsupport
+	url = https://gitrepos.estec.esa.int/taste/buildsupport.git
