Adding installation of the STM32 programmer utilities.

--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "msc-editor"]
 	path = msc-editor
 	url = https://gitrepos.estec.esa.int/taste/msc-editor.git
+[submodule "stlink"]
+	path = stlink
+	url = https://github.com/texane/stlink.git
