--- a/circle.yml
+++ b/circle.yml
@@ -12,5 +12,5 @@ dependencies:
 
 test:
   override:
-    - export TASTE_IN_DOCKER=1 ; docker run -e DISPLAY -e TASTE_IN_DOCKER -it taste /bin/bash -c 'cd /root/ ; . .bashrc.taste ; cd tool-src ; ./Update-TASTE.sh || exit 1 ; cd testSuites/ ; ./regression.py || exit 1':
+    - export TASTE_IN_DOCKER=1 ; docker run -e DISPLAY -e TASTE_IN_DOCKER -e CIRCLECI -it taste /bin/bash -c 'cd /root/ ; . .bashrc.taste ; cd tool-src ; ./Update-TASTE.sh || exit 1 ; cd testSuites/ ; ./regression.py || exit 1':
 
