Introduce the MORA build system (kazoo)

--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "air"]
 	path = air
 	url = https://gitrepos.estec.esa.int/taste/air.git
+[submodule "kazoo"]
+	path = kazoo
+	url = https://gitrepos.estec.esa.int/taste/kazoo.git
